cf.yaml
  AWSTemplateFormatVersion: '2010-09-09'
  Description: 'LKS Jakarta Timur 2 - Ibrahim - Complete Infrastructure Template'

  Parameters:
    EnvironmentName:
      Description: An environment name that is prefixed to resource names
      Type: String
      Default: lks-adel

    VpcCIDR:
      Description: This is the main CIDR of lks-adel
      Type: String
      Default: 20.2.0.0/16

    PublicSubnet1CIDR:
      Description: This CIDR for Public Subnet 1A VPC
      Type: String
      Default: 20.2.0.0/24

    PublicSubnet2CIDR:
      Description: This CIDR for Public Subnet 2B VPC
      Type: String
      Default: 20.2.1.0/24

    PrivateSubnet1CIDR:
      Description: This CIDR for Private Subnet 1A VPC
      Type: String
      Default: 20.2.2.0/24

    PrivateSubnet2CIDR:
      Description: This CIDR for Private Subnet 2B VPC
      Type: String
      Default: 20.2.3.0/24

    DBInstanceID:
      Default: LKS-RDS-Apps
      Description: Database MariaDB
      Type: String
      MinLength: '1'
      MaxLength: '63'
      AllowedPattern: '^[a-zA-Z]{1}[a-zA-Z0-9-]*$'
      ConstraintDescription: >-
        Must begin with a letter and must not end with a hyphen or contain two
        consecutive hyphens.

    DBName:
      Default: technords
      Description: Database name
      Type: String
      MinLength: '1'
      MaxLength: '64'
      AllowedPattern: '^[a-zA-Z]{1}[a-zA-Z0-9-]*$'
      ConstraintDescription: Must begin with a letter and contain only alphanumeric characters.

    DBInstanceClass:
      Default: db.t4g.micro
      Description: DB instance class
      Type: String
      ConstraintDescription: Must select a valid DB instance type.

    DBAllocatedStorage:
      Default: '20'
      Description: The size of the database (GiB)
      Type: Number
      MinValue: '20'
      MaxValue: '65536'
      ConstraintDescription: must be between 20 and 65536 GiB.

    DBUsername:
      NoEcho: 'true'
      Description: Username for MySQL database access
      Type: String
      Default: lksmariadb
      MinLength: '1'
      MaxLength: '16'
      AllowedPattern: '^[a-zA-Z]{1}[a-zA-Z0-9-]*$'
      ConstraintDescription: must begin with a letter and contain only alphanumeric characters.

    DBPassword:
      NoEcho: 'true'
      Description: Password MySQL database access
      Type: String
      Default: Technobrain2025!
      MinLength: '8'
      MaxLength: '41'
      ConstraintDescription: must contain only alphanumeric characters.

  Resources:
    VPC:
      Type: AWS::EC2::VPC
      Properties:
        CidrBlock: !Ref VpcCIDR
        EnableDnsSupport: true
        EnableDnsHostnames: true
        Tags:
          - Key: Name
            Value: !Sub ${EnvironmentName}-vpc

    InternetGateway:
      Type: AWS::EC2::InternetGateway
      Properties:
        Tags:
          - Key: Name
            Value: !Sub ${EnvironmentName}-igw

    InternetGatewayAttachment:
      Type: AWS::EC2::VPCGatewayAttachment
      Properties:
        InternetGatewayId: !Ref InternetGateway
        VpcId: !Ref VPC

    PublicSubnet1:
      Type: AWS::EC2::Subnet
      Properties:
        VpcId: !Ref VPC
        AvailabilityZone: !Select [ 0, !GetAZs '' ]
        CidrBlock: !Ref PublicSubnet1CIDR
        MapPublicIpOnLaunch: true
        Tags:
          - Key: Name
            Value: !Sub ${EnvironmentName}-public-subnet-1a

    PublicSubnet2:
      Type: AWS::EC2::Subnet
      Properties:
        VpcId: !Ref VPC
        AvailabilityZone: !Select [ 1, !GetAZs '' ]
        CidrBlock: !Ref PublicSubnet2CIDR
        MapPublicIpOnLaunch: true
        Tags:
          - Key: Name
            Value: !Sub ${EnvironmentName}-public-subnet-2b

    PrivateSubnet1:
      Type: AWS::EC2::Subnet
      Properties:
        VpcId: !Ref VPC
        AvailabilityZone: !Select [ 0, !GetAZs '' ]
        CidrBlock: !Ref PrivateSubnet1CIDR
        MapPublicIpOnLaunch: false
        Tags:
          - Key: Name
            Value: !Sub ${EnvironmentName}-private-subnet-1a

    PrivateSubnet2:
      Type: AWS::EC2::Subnet
      Properties:
        VpcId: !Ref VPC
        AvailabilityZone: !Select [ 1, !GetAZs '' ]
        CidrBlock: !Ref PrivateSubnet2CIDR
        MapPublicIpOnLaunch: false
        Tags:
          - Key: Name
            Value: !Sub ${EnvironmentName}-private-subnet-2b
    
    PublicRouteTable:
      Type: AWS::EC2::RouteTable
      Properties:
        VpcId: !Ref VPC
        Tags:
          - Key: Name
            Value: !Sub ${EnvironmentName}-public-rt

    DefaultPublicRoute:
      Type: AWS::EC2::Route
      DependsOn: InternetGatewayAttachment
      Properties:
        RouteTableId: !Ref PublicRouteTable
        DestinationCidrBlock: 0.0.0.0/0
        GatewayId: !Ref InternetGateway

    PublicSubnet1RouteTableAssociation:
      Type: AWS::EC2::SubnetRouteTableAssociation
      Properties:
        RouteTableId: !Ref PublicRouteTable
        SubnetId: !Ref PublicSubnet1

    PublicSubnet2RouteTableAssociation:
      Type: AWS::EC2::SubnetRouteTableAssociation
      Properties:
        RouteTableId: !Ref PublicRouteTable
        SubnetId: !Ref PublicSubnet2

    PrivateRouteTable1:
      Type: AWS::EC2::RouteTable
      Properties:
        VpcId: !Ref VPC
        Tags:
          - Key: Name
            Value: !Sub ${EnvironmentName}-private-rt-1a

    PrivateRouteTable2:
      Type: AWS::EC2::RouteTable
      Properties:
        VpcId: !Ref VPC
        Tags:
          - Key: Name
            Value: !Sub ${EnvironmentName}-private-rt-2b
            
    PrivateSubnet1RouteTableAssociation:
      Type: AWS::EC2::SubnetRouteTableAssociation
      Properties:
        RouteTableId: !Ref PrivateRouteTable1
        SubnetId: !Ref PrivateSubnet1

    PrivateSubnet2RouteTableAssociation:
      Type: AWS::EC2::SubnetRouteTableAssociation
      Properties:
        RouteTableId: !Ref PrivateRouteTable2
        SubnetId: !Ref PrivateSubnet2

    SGLB:
      Type: AWS::EC2::SecurityGroup
      Properties:
        GroupDescription: This SG for Load Balancer Apps
        VpcId: !Ref VPC
        SecurityGroupIngress:
          - IpProtocol: tcp
            FromPort: 80
            ToPort: 80
            CidrIp: 0.0.0.0/0
          - IpProtocol: tcp
            FromPort: 443
            ToPort: 443
            CidrIp: 0.0.0.0/0
        SecurityGroupEgress:
          - IpProtocol: tcp
            FromPort: 0
            ToPort: 65535
            CidrIp: 0.0.0.0/0
        Tags:
          - Key: Name
            Value: !Sub ${EnvironmentName}-sg-lb

    SGApps:
      Type: AWS::EC2::SecurityGroup
      Properties:
        GroupDescription: This SG for handle access control for application-related services Apps
        VpcId: !Ref VPC
        SecurityGroupIngress:
          - IpProtocol: tcp
            FromPort: 2049
            ToPort: 2049
            CidrIp: !Ref VpcCIDR
          - IpProtocol: tcp
            FromPort: 3306
            ToPort: 3306
            CidrIp: !Ref VpcCIDR
          - IpProtocol: tcp
            FromPort: 5000
            ToPort: 5000
            CidrIp: !Ref VpcCIDR
        Tags:
          - Key: Name
            Value: !Sub ${EnvironmentName}-sg-apps

    DBSubnetGroupRDS:
      Type: AWS::RDS::DBSubnetGroup
      Properties:
        DBSubnetGroupDescription: Private subnet group rds
        SubnetIds:
          - !Ref PrivateSubnet1
          - !Ref PrivateSubnet2
        Tags:
          - Key: Name
            Value: !Sub ${EnvironmentName}-db-subnet-group
          
    NATInstance:
      Type: AWS::EC2::Instance
      Properties:
        ImageId: ami-0015c0130d6cc5da7
        InstanceType: t2.micro
        NetworkInterfaces:
          - AssociatePublicIpAddress: true
            DeviceIndex: 0
            GroupSet: [ !Ref SGApps ]
            SubnetId: !Ref PublicSubnet1
        SourceDestCheck: false 
        Tags:
          - Key: Name
            Value: !Sub ${EnvironmentName}-nat-instance

    DefaultPrivateRoute1:
      Type: AWS::EC2::Route
      Properties:
        RouteTableId: !Ref PrivateRouteTable1
        DestinationCidrBlock: 0.0.0.0/0
        InstanceId: !Ref NATInstance 

    DefaultPrivateRoute2:
      Type: AWS::EC2::Route
      Properties:
        RouteTableId: !Ref PrivateRouteTable2
        DestinationCidrBlock: 0.0.0.0/0
        InstanceId: !Ref NATInstance

    RDS:
      Type: AWS::RDS::DBInstance
      Properties:
        DBInstanceIdentifier: !Ref DBInstanceID
        DBName: !Ref DBName
        DBInstanceClass: !Ref DBInstanceClass
        AllocatedStorage: !Ref DBAllocatedStorage
        Engine: MariaDB
        EngineVersion: "11.4"
        MasterUsername: !Ref DBUsername
        MasterUserPassword: !Ref DBPassword
        VPCSecurityGroups:
          - !GetAtt SGApps.GroupId
        DBSubnetGroupName: !Ref DBSubnetGroupRDS
        MonitoringInterval: 0
        PubliclyAccessible: false
        MultiAZ: false
        StorageType: gp3
        Tags:
          - Key: Name
            Value: !Sub ${EnvironmentName}-rds

    S3:
      Type: AWS::S3::Bucket
      DeletionPolicy: Retain
      Properties:
        BucketName: !Sub ${EnvironmentName}-dockerimage-${AWS::AccountId}
        OwnershipControls:
          Rules:
            - ObjectOwnership: BucketOwnerPreferred
        VersioningConfiguration:
          Status: Enabled
      LifecycleConfiguration:
        Rules:
          - Id: ArchiveAndExpire
            Status: Enabled
            Transitions:
              - TransitionInDays: 30
                StorageClass: GLACIER
            ExpirationInDays: 365
        PublicAccessBlockConfiguration:
          BlockPublicAcls: false
          BlockPublicPolicy: false
          IgnorePublicAcls: false
          RestrictPublicBuckets: false
        Tags:
          - Key: Name
            Value: !Sub ${EnvironmentName}-s3-bucket

    BucketPolicy:
      Type: AWS::S3::BucketPolicy
      Properties:
        Bucket: !Ref S3
        PolicyDocument:
          Version: '2012-10-17'
          Statement:
            - Effect: Allow
              Principal: '*'
              Action: 
                - '*'
              Resource: !Sub 'arn:aws:s3:::${S3}/*'

    EFS:
        Type: AWS::EFS::FileSystem
        Properties:
          FileSystemTags:
            - Key: Name
              Value: lksappsefs
          LifecyclePolicies:
            - TransitionToIA: AFTER_30_DAYS
            - TransitionToPrimaryStorageClass: AFTER_1_ACCESS
          PerformanceMode: generalPurpose
          ThroughputMode: elastic
          Encrypted: true

    EFSMountTarget1:
      Type: AWS::EFS::MountTarget
      Properties:
        FileSystemId: !Ref EFS
        SubnetId: !Ref PrivateSubnet1
        SecurityGroups:
          - !GetAtt SGApps.GroupId

    EFSMountTarget2:
      Type: AWS::EFS::MountTarget
      Properties:
        FileSystemId: !Ref EFS
        SubnetId: !Ref PrivateSubnet2
        SecurityGroups:
          - !GetAtt SGApps.GroupId

  Outputs:
    VPC:
      Description: A reference to the created VPC
      Value: !Ref VPC
      Export:
        Name: !Sub ${EnvironmentName}-vpc-id

    PublicSubnets:
      Description: A list of the public subnets
      Value: !Join [ ",", [ !Ref PublicSubnet1, !Ref PublicSubnet2 ]]
      Export:
        Name: !Sub ${EnvironmentName}-public-subnets

    PrivateSubnets:
      Description: A list of the private subnets
      Value: !Join [ ",", [ !Ref PrivateSubnet1, !Ref PrivateSubnet2 ]]
      Export:
        Name: !Sub ${EnvironmentName}-private-subnets

    SGLB:
      Description: This SG for Load Balancer Apps
      Value: !Ref SGLB
      Export:
        Name: !Sub ${EnvironmentName}-sg-lb

    SGApps:
      Description: This SG for handle access control for application-related services Apps
      Value: !Ref SGApps
      Export:
        Name: !Sub ${EnvironmentName}-sg-apps

    RDS:
      Description: RDS for Apps
      Value: !Ref RDS
      Export:
        Name: !Sub ${EnvironmentName}-rds

    RDSEndpoint:
      Description: RDS Endpoint
      Value: !GetAtt RDS.Endpoint.Address
      Export:
        Name: !Sub ${EnvironmentName}-rds-endpoint

    S3:
      Description: Bucket for Apps
      Value: !Ref S3
      Export:
        Name: !Sub ${EnvironmentName}-s3-bucket

    EFS:
      Description: EFS for save files
      Value: !Ref EFS
      Export:
        Name: !Sub ${EnvironmentName}-efs

    EFSSecurityGroup:
      Description: Security Group for EFS
      Value: !Ref SGApps
      Export:
        Name: !Sub ${EnvironmentName}-efs-sg
